config/k8s/development/ns.yaml
kind: Namespace

apiVersion: v1

metadata:
  name: app-development

  labels:
    name: app-development
