config/k8s/development/app.yaml
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: app

  namespace: app-development
  labels:
    app: app

spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: app

  template:
    metadata:
      creationTimestamp: null

      labels:
        app: app

    spec:

      containers:

      - name: web
        image: exadeltaskapps.azurecr.io/app:development
        imagePullPolicy: Always

        command: ["script/startup.sh"]

        resources:
          limits:
            memory: "512Mi"

        ports:
          - containerPort: 3000

      - name: worker
        image: exadeltaskapps.azurecr.io/app:development
        imagePullPolicy: Always

        command: ["script/startup.sh"]
        args: ["worker"]

        resources:
          limits:
            memory: "512Mi"

        ports:
          - containerPort: 3000

      - name: shredder
        image: exadeltaskapps.azurecr.io/app:development
        imagePullPolicy: Always

        command: ["script/startup.sh"]
        args: ["shredder"]

        resources:
          limits:
            memory: "512Mi"

---
apiVersion: v1

kind: Service

metadata:
  name: app
  namespace: app-development
  labels:
    run: app

spec:
  type: LoadBalancer
  selector:
    app: app
  ports:
  - port: 3000
    protocol: TCP
