config/k8s/development/ingress.yaml
---
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: app
  namespace: app-development

  annotations:

spec:
  ingressClassName: nginx

  rules:
    - host: 'dev.awsops.ml'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 3000

    - host: '*.dev.awsops.ml'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 3000
